exports[`BpkInteractiveStarRating should render 4 stars based on hoverRating as it has priority over rating 1`] = `
<div
  className="bpk-star-rating"
  onMouseLeave={[Function]}>
  <BpkInteractiveStar
    label="1 out of 5 stars"
    large={false}
    name="my-rating_rating"
    onChange={[Function]}
    onMouseEnter={[Function]}
    selected={false}
    type="full"
    value={1} />
  <BpkInteractiveStar
    label="2 out of 5 stars"
    large={false}
    name="my-rating_rating"
    onChange={[Function]}
    onMouseEnter={[Function]}
    selected={false}
    type="full"
    value={2} />
  <BpkInteractiveStar
    label="3 out of 5 stars"
    large={false}
    name="my-rating_rating"
    onChange={[Function]}
    onMouseEnter={[Function]}
    selected={true}
    type="full"
    value={3} />
  <BpkInteractiveStar
    label="4 out of 5 stars"
    large={false}
    name="my-rating_rating"
    onChange={[Function]}
    onMouseEnter={[Function]}
    selected={false}
    type="full"
    value={4} />
  <BpkInteractiveStar
    label="5 out of 5 stars"
    large={false}
    name="my-rating_rating"
    onChange={[Function]}
    onMouseEnter={[Function]}
    selected={false}
    type="empty"
    value={5} />
</div>
`;

exports[`BpkInteractiveStarRating should render correctly if you give it more than the max rating allowed 1`] = `
<div
  className="bpk-star-rating"
  onMouseLeave={[Function]}>
  <BpkInteractiveStar
    label="1 out of 5 stars"
    large={false}
    name="my-rating_rating"
    onChange={[Function]}
    onMouseEnter={[Function]}
    selected={false}
    type="full"
    value={1} />
  <BpkInteractiveStar
    label="2 out of 5 stars"
    large={false}
    name="my-rating_rating"
    onChange={[Function]}
    onMouseEnter={[Function]}
    selected={false}
    type="full"
    value={2} />
  <BpkInteractiveStar
    label="3 out of 5 stars"
    large={false}
    name="my-rating_rating"
    onChange={[Function]}
    onMouseEnter={[Function]}
    selected={false}
    type="full"
    value={3} />
  <BpkInteractiveStar
    label="4 out of 5 stars"
    large={false}
    name="my-rating_rating"
    onChange={[Function]}
    onMouseEnter={[Function]}
    selected={false}
    type="full"
    value={4} />
  <BpkInteractiveStar
    label="5 out of 5 stars"
    large={false}
    name="my-rating_rating"
    onChange={[Function]}
    onMouseEnter={[Function]}
    selected={false}
    type="full"
    value={5} />
</div>
`;

exports[`BpkInteractiveStarRating should render correctly with "large" attribute 1`] = `
<div
  className="bpk-star-rating"
  onMouseLeave={[Function]}>
  <BpkInteractiveStar
    label="1 out of 5 stars"
    large={true}
    name="my-rating_rating"
    onChange={[Function]}
    onMouseEnter={[Function]}
    selected={false}
    type="full"
    value={1} />
  <BpkInteractiveStar
    label="2 out of 5 stars"
    large={true}
    name="my-rating_rating"
    onChange={[Function]}
    onMouseEnter={[Function]}
    selected={false}
    type="full"
    value={2} />
  <BpkInteractiveStar
    label="3 out of 5 stars"
    large={true}
    name="my-rating_rating"
    onChange={[Function]}
    onMouseEnter={[Function]}
    selected={false}
    type="full"
    value={3} />
  <BpkInteractiveStar
    label="4 out of 5 stars"
    large={true}
    name="my-rating_rating"
    onChange={[Function]}
    onMouseEnter={[Function]}
    selected={false}
    type="full"
    value={4} />
  <BpkInteractiveStar
    label="5 out of 5 stars"
    large={true}
    name="my-rating_rating"
    onChange={[Function]}
    onMouseEnter={[Function]}
    selected={true}
    type="full"
    value={5} />
</div>
`;

exports[`BpkInteractiveStarRating should render correctly with "maxRating" attribute 1`] = `
<div
  className="bpk-star-rating"
  onMouseLeave={[Function]}>
  <BpkInteractiveStar
    label="1 out of 8 stars"
    large={false}
    name="my-rating_rating"
    onChange={[Function]}
    onMouseEnter={[Function]}
    selected={false}
    type="full"
    value={1} />
  <BpkInteractiveStar
    label="2 out of 8 stars"
    large={false}
    name="my-rating_rating"
    onChange={[Function]}
    onMouseEnter={[Function]}
    selected={false}
    type="full"
    value={2} />
  <BpkInteractiveStar
    label="3 out of 8 stars"
    large={false}
    name="my-rating_rating"
    onChange={[Function]}
    onMouseEnter={[Function]}
    selected={false}
    type="full"
    value={3} />
  <BpkInteractiveStar
    label="4 out of 8 stars"
    large={false}
    name="my-rating_rating"
    onChange={[Function]}
    onMouseEnter={[Function]}
    selected={false}
    type="full"
    value={4} />
  <BpkInteractiveStar
    label="5 out of 8 stars"
    large={false}
    name="my-rating_rating"
    onChange={[Function]}
    onMouseEnter={[Function]}
    selected={true}
    type="full"
    value={5} />
  <BpkInteractiveStar
    label="6 out of 8 stars"
    large={false}
    name="my-rating_rating"
    onChange={[Function]}
    onMouseEnter={[Function]}
    selected={false}
    type="empty"
    value={6} />
  <BpkInteractiveStar
    label="7 out of 8 stars"
    large={false}
    name="my-rating_rating"
    onChange={[Function]}
    onMouseEnter={[Function]}
    selected={false}
    type="empty"
    value={7} />
  <BpkInteractiveStar
    label="8 out of 8 stars"
    large={false}
    name="my-rating_rating"
    onChange={[Function]}
    onMouseEnter={[Function]}
    selected={false}
    type="empty"
    value={8} />
</div>
`;

exports[`BpkInteractiveStarRating should render correctly with 0 stars 1`] = `
<div
  className="bpk-star-rating"
  onMouseLeave={[Function]}>
  <BpkInteractiveStar
    label="1 out of 5 stars"
    large={false}
    name="my-rating_rating"
    onChange={[Function]}
    onMouseEnter={[Function]}
    selected={false}
    type="empty"
    value={1} />
  <BpkInteractiveStar
    label="2 out of 5 stars"
    large={false}
    name="my-rating_rating"
    onChange={[Function]}
    onMouseEnter={[Function]}
    selected={false}
    type="empty"
    value={2} />
  <BpkInteractiveStar
    label="3 out of 5 stars"
    large={false}
    name="my-rating_rating"
    onChange={[Function]}
    onMouseEnter={[Function]}
    selected={false}
    type="empty"
    value={3} />
  <BpkInteractiveStar
    label="4 out of 5 stars"
    large={false}
    name="my-rating_rating"
    onChange={[Function]}
    onMouseEnter={[Function]}
    selected={false}
    type="empty"
    value={4} />
  <BpkInteractiveStar
    label="5 out of 5 stars"
    large={false}
    name="my-rating_rating"
    onChange={[Function]}
    onMouseEnter={[Function]}
    selected={false}
    type="empty"
    value={5} />
</div>
`;

exports[`BpkInteractiveStarRating should render correctly with 3 stars 1`] = `
<div
  className="bpk-star-rating"
  onMouseLeave={[Function]}>
  <BpkInteractiveStar
    label="1 out of 5 stars"
    large={false}
    name="my-rating_rating"
    onChange={[Function]}
    onMouseEnter={[Function]}
    selected={false}
    type="full"
    value={1} />
  <BpkInteractiveStar
    label="2 out of 5 stars"
    large={false}
    name="my-rating_rating"
    onChange={[Function]}
    onMouseEnter={[Function]}
    selected={false}
    type="full"
    value={2} />
  <BpkInteractiveStar
    label="3 out of 5 stars"
    large={false}
    name="my-rating_rating"
    onChange={[Function]}
    onMouseEnter={[Function]}
    selected={true}
    type="full"
    value={3} />
  <BpkInteractiveStar
    label="4 out of 5 stars"
    large={false}
    name="my-rating_rating"
    onChange={[Function]}
    onMouseEnter={[Function]}
    selected={false}
    type="empty"
    value={4} />
  <BpkInteractiveStar
    label="5 out of 5 stars"
    large={false}
    name="my-rating_rating"
    onChange={[Function]}
    onMouseEnter={[Function]}
    selected={false}
    type="empty"
    value={5} />
</div>
`;

exports[`BpkInteractiveStarRating should render correctly with 3.5 stars 1`] = `
<div
  className="bpk-star-rating"
  onMouseLeave={[Function]}>
  <BpkInteractiveStar
    label="1 out of 5 stars"
    large={false}
    name="my-rating_rating"
    onChange={[Function]}
    onMouseEnter={[Function]}
    selected={false}
    type="full"
    value={1} />
  <BpkInteractiveStar
    label="2 out of 5 stars"
    large={false}
    name="my-rating_rating"
    onChange={[Function]}
    onMouseEnter={[Function]}
    selected={false}
    type="full"
    value={2} />
  <BpkInteractiveStar
    label="3 out of 5 stars"
    large={false}
    name="my-rating_rating"
    onChange={[Function]}
    onMouseEnter={[Function]}
    selected={false}
    type="full"
    value={3} />
  <BpkInteractiveStar
    label="4 out of 5 stars"
    large={false}
    name="my-rating_rating"
    onChange={[Function]}
    onMouseEnter={[Function]}
    selected={false}
    type="empty"
    value={4} />
  <BpkInteractiveStar
    label="5 out of 5 stars"
    large={false}
    name="my-rating_rating"
    onChange={[Function]}
    onMouseEnter={[Function]}
    selected={false}
    type="empty"
    value={5} />
</div>
`;

exports[`BpkInteractiveStarRating should render correctly with 5 stars 1`] = `
<div
  className="bpk-star-rating"
  onMouseLeave={[Function]}>
  <BpkInteractiveStar
    label="1 out of 5 stars"
    large={false}
    name="my-rating_rating"
    onChange={[Function]}
    onMouseEnter={[Function]}
    selected={false}
    type="full"
    value={1} />
  <BpkInteractiveStar
    label="2 out of 5 stars"
    large={false}
    name="my-rating_rating"
    onChange={[Function]}
    onMouseEnter={[Function]}
    selected={false}
    type="full"
    value={2} />
  <BpkInteractiveStar
    label="3 out of 5 stars"
    large={false}
    name="my-rating_rating"
    onChange={[Function]}
    onMouseEnter={[Function]}
    selected={false}
    type="full"
    value={3} />
  <BpkInteractiveStar
    label="4 out of 5 stars"
    large={false}
    name="my-rating_rating"
    onChange={[Function]}
    onMouseEnter={[Function]}
    selected={false}
    type="full"
    value={4} />
  <BpkInteractiveStar
    label="5 out of 5 stars"
    large={false}
    name="my-rating_rating"
    onChange={[Function]}
    onMouseEnter={[Function]}
    selected={true}
    type="full"
    value={5} />
</div>
`;
